----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-04-27 Michal Cihar  <michal@cihar.com>
    * calendar.php, libraries/tbl_change.js: Don't reset clock when moving in
      calendar.
    * Almost everyting: Be valid XHTML (probably still not completely).

2004-04-27 Garvin Hicking <pma@supergarv.de>
    * libraries/display_tbl.lib.php: Bug #942392 - Wrapping sort order
      link in a way that the image always belongs to the last word
    * libraries/display_tbl.lib.php: RFE #867284 - Click on result row
      to mark the checkbox.
    * tbl_select.php: RFE #940194 - Add REGEXP to table search options
    * read_dump.php: Bug #925913 - Uploading with UploadDir/open_basedir
      fails.
    * querywindow.php: Bug #942395 - Missing space
    * libraries/display_tbl.lib.php: Bug #942362 - Colspan of results
      table off by one.
    * db_datadict.php: Bug #942359 - Data dictionary had wrong <div>-
      count. Replace h1 with h2 for consitency
    * libraries/display_tbl.lib.php, tbl_row_delete: Bug #942356,
      missing localization for multi-row edit/delete/export feature.
    * footer.inc.php: Fixed bug #942316 - Consistent window layout for
      query window.
    * left.php: Fixed bug #942374 - Undefined indizes in left frame
      for light mode. Improved performance. Fixed tab-formatted code and
      adjusted to coding guidelines.
    * read_dump.php: Fixed bug #942390 - When entering a "USE database"
      query together with multiple other queries, the db was reset to
      the first one.

2004-04-26 Marc Delisle  <lem9@users.sourceforge.net>
    * config.inc.php, left.php, Documentation.html,
      libraries/config_import.lib.php, libraries/common.lib.php:
      $cfg['LeftDisplayServersList'] to display the server choice as links,
      thanks to Cal Henderson

2004-04-26 Michal Cihar  <michal@cihar.com>
    * libraries/string.lib.php: mb_* functions don't know some windows-*
      charsets (bug #940638).